# sabaio_framework

./: LICENSE  README.md  pyproject.toml  sample_usage.ipynb
classification/: todo.py
eval/database/: calc_scores.py  db.py  sample_use.ipynb
eval/database/data_sample/: prompt_questions.db  sample_data.csv  test.csv
eval/database/static/: vals.py
src/: utils.py
src/sabaio/: __init__.py  core.py
src/sabaio/code_base/: main.ipynb
src/sabaio/code_base/data_sample/: prompt_questions.db
src/static/: vals.py
